IMP: Added firebase

--- a/public/index.html
+++ b/public/index.html
@@ -4,14 +4,30 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>eventime</title>
+    <title>Codematters</title>
   </head>
   <body>
-    <noscript>
-      <strong>We're sorry but eventime doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-    </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
+    <script src="https://www.gstatic.com/firebasejs/6.2.1/firebase-app.js"></script>
+
+    <!-- TODO: Add SDKs for Firebase products that you want to use
+        https://firebase.google.com/docs/web/setup#config-web-app -->
+
+    <script>
+      // Your web app's Firebase configuration
+      var firebaseConfig = {
+        apiKey: "AIzaSyCD92Of_iAoRnzJw3XjBqFbnaRcd4XwHvM",
+        authDomain: "codematters-5d18f.firebaseapp.com",
+        databaseURL: "https://codematters-5d18f.firebaseio.com",
+        projectId: "codematters-5d18f",
+        storageBucket: "codematters-5d18f.appspot.com",
+        messagingSenderId: "692409872819",
+        appId: "1:692409872819:web:92b926b1c8c84475"
+      };
+      // Initialize Firebase
+      firebase.initializeApp(firebaseConfig);
+    </script>
   </body>
 </html>
